Improving about.html

--- a/about.html
+++ b/about.html
@@ -3,156 +3,199 @@
 
 <head>
 
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="2014年11月2〜3日に行われる，東京電機大学 東京千住キャンパスの第3回 旭祭の公式ウェブサイトです。" />
-    <meta name="author" content="東京電機大学 東京千住キャンパス 第3回旭祭実行委員" />
+	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="description" content="2014年11月2〜3日に行われる，東京電機大学 東京千住キャンパスの第3回 旭祭の公式ウェブサイトです。" />
+	<meta name="author" content="東京電機大学 東京千住キャンパス 第3回旭祭実行委員" />
 
-    <title>概要 - 東京電機大学 工学部・未来科学部 第3回旭祭</title>
+	<title>概要 - 東京電機大学 工学部・未来科学部 第3回旭祭</title>
 
-    <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
+	<!-- Bootstrap Core CSS -->
+	<link href="css/bootstrap.min.css" rel="stylesheet" />
 
-    <!-- Custom CSS -->
-    <link href="css/round-about.css" rel="stylesheet" />
+	<!-- Custom CSS -->
+	<link href="css/round-about.css" rel="stylesheet" />
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	<!--[if lt IE 9]>
+		<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+		<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+		<![endif]-->
 
-    <!-- Original stylesheet -->
-    <link href="./css/style.css" rel="stylesheet" />
+		<!-- Original stylesheet -->
+		<link href="./css/style.css" rel="stylesheet" />
 
-</head>
+		<script>
+		var shiftWindow = function() { scrollBy(0, -50) };
+		window.addEventListener("hashchange", shiftWindow);
+		function load() { if (window.location.hash) shiftWindow(); }
+		</script>
 
-<body>
-    <!-- Go to www.addthis.com/dashboard to customize your tools -->
-	<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-542e810a7be1ccbb" async></script>
+	</head>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="./index.html">第3回 旭祭</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a href="#">概要</a>
-                    </li>
-                    <li>
-                        <a href="./event.html">イベント</a>
-                    </li>
-                    <li>
-                        <a href="./contact.html">お問い合わせ</a>
-                    </li>
-		    <li>
-                        <a href="./notice.html">参加団体の方へ</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
+	<body onload="load()">
+		<!-- Go to www.addthis.com/dashboard to customize your tools -->
+		<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-542e810a7be1ccbb" async></script>
 
-    <!-- Page Content -->
-    <div class="container">
+		<!-- Navigation -->
+		<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+			<div class="container">
+				<!-- Brand and toggle get grouped for better mobile display -->
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="./index.html">第3回 旭祭</a>
+				</div>
+				<!-- Collect the nav links, forms, and other content for toggling -->
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav">
+						<li>
+							<a href="#">概要</a>
+						</li>
+						<li>
+							<a href="./event.html">イベント</a>
+						</li>
+						<li>
+							<a href="./contact.html">お問い合わせ</a>
+						</li>
+						<li>
+							<a href="./notice.html">参加団体の方へ</a>
+						</li>
+					</ul>
+				</div>
+				<!-- /.navbar-collapse -->
+			</div>
+			<!-- /.container -->
+		</nav>
 
-        <!-- Introduction Row -->
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header">概要
-                    <small>旭祭の由来</small>
-                </h1>
-                <p>「旭祭」という名前は、千代田区神田の旧キャンパスから足立区千住旭町の新キャンパスへ移るにあたり周辺地域の方々と協力し、地域に根づいた学園祭にしたいという想いのもと、名付けられました。</p>
-            </div>
-        </div>
+		<!-- Page Content -->
+		<div class="container">
 
-        <!-- Team Members Row -->
-        <div class="row">
-            <div class="col-lg-12">
-                <h2 class="page-header">第3回 旭祭実行委員会</h2>
-            </div>
-            <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
-                <h3>John Smith
-                    <small>Job Title</small>
-                </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
-            </div>
-            <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
-                <h3>John Smith
-                    <small>Job Title</small>
-                </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
-            </div>
-            <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
-                <h3>John Smith
-                    <small>Job Title</small>
-                </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
-            </div>
-            <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
-                <h3>John Smith
-                    <small>Job Title</small>
-                </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
-            </div>
-            <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
-                <h3>John Smith
-                    <small>Job Title</small>
-                </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
-            </div>
-            <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="./images/keisei.png" alt="keisei">
-                <h3>keisei
-                    <small>Webサイト構築手伝い</small>
-                </h3>
-                <p>どさくさにまぎれて（本チャンのときに消します）</p>
-            </div>
-        </div>
+			<!-- Introduction Row -->
+			<div id="introduction" class="row">
+				<div class="col-lg-12">
+					<h1 class="page-header">概要
+						<small>旭祭の由来</small>
+					</h1>
+					<p>「旭祭」という名前は、千代田区神田の旧キャンパスから足立区千住旭町の新キャンパスへ移るにあたり周辺地域の方々と協力し、地域に根づいた学園祭にしたいという想いのもと、名付けられました。</p>
+				</div>
+			</div>
 
-        <hr>
+			<!-- Team Members Row -->
+			<div class="row">
+				<div class="col-lg-12">
+					<h2 class="page-header">第3回 旭祭実行委員会</h2>
+				</div>
+				<div class="col-lg-4 col-sm-6 text-center">
+					<img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
+					<h3>John Smith
+						<small>Job Title</small>
+					</h3>
+					<p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+				</div>
+				<div class="col-lg-4 col-sm-6 text-center">
+					<img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
+					<h3>John Smith
+						<small>Job Title</small>
+					</h3>
+					<p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+				</div>
+				<div class="col-lg-4 col-sm-6 text-center">
+					<img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
+					<h3>John Smith
+						<small>Job Title</small>
+					</h3>
+					<p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+				</div>
+				<div class="col-lg-4 col-sm-6 text-center">
+					<img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
+					<h3>John Smith
+						<small>Job Title</small>
+					</h3>
+					<p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+				</div>
+				<div class="col-lg-4 col-sm-6 text-center">
+					<img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
+					<h3>John Smith
+						<small>Job Title</small>
+					</h3>
+					<p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+				</div>
+				<div class="col-lg-4 col-sm-6 text-center">
+					<img class="img-circle img-responsive img-center" src="./images/keisei.png" alt="keisei">
+					<h3>Saito Keisei
+						<small>Webサイト構築手伝い</small>
+					</h3>
+					<p>どさくさにまぎれて</p>
+				</div>
+			</div>
 
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; 東京電機大学東京千住キャンパス 第3回旭祭実行委員会<br />
-			    Designed by <a href="http://twitter.com/keisei_1092" target="blank">@keisei_1092</a> (未来科学部 情報メディア学科 3年)</p>
-                </div>
-                <!-- /.col-lg-12 -->
-            </div>
-            <!-- /.row -->
-        </footer>
+			<!-- Access Row -->
+			<div id="access" class="row">
+				<div class="col-lg-12">
+					<h1 class="page-header">交通アクセス
+						<small>Access</small>
+					</h1>
+					<div class="col-lg-8 hidden-md hidden-sm hidden-xs"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3238.1036938220964!2d139.806906!3d35.74825599999999!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188e5211a864ef%3A0x26a050d2e5ee79fc!2z5p2x5Lqs6Zu75qmf5aSn5a2m!5e0!3m2!1sja!2sjp!4v1412587261647" width="720" height="600" frameborder="0" style="border:0"></iframe></div>
+					<div class="col-md-8 hidden-lg hidden-sm hidden-xs">
+						<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3238.1036938220964!2d139.806906!3d35.74825599999999!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188e5211a864ef%3A0x26a050d2e5ee79fc!2z5p2x5Lqs6Zu75qmf5aSn5a2m!5e0!3m2!1sja!2sjp!4v1412583731501" width="600" height="450" frameborder="0" style="border:0"></iframe>
+					</div>
+					<div class="col-sm-8 hidden-lg hidden-md hidden-xs">
+						<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3238.1036938220964!2d139.806906!3d35.74825599999999!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188e5211a864ef%3A0x26a050d2e5ee79fc!2z5p2x5Lqs6Zu75qmf5aSn5a2m!5e0!3m2!1sja!2sjp!4v1412583731501" width="450" height="450" frameborder="0" style="border:0"></iframe>
+					</div>
+					<div class="col-xs-12 hidden-sm hidden-md hidden-lg">
+						<p><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3238.1036938220964!2d139.806906!3d35.74825599999999!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188e5211a864ef%3A0x26a050d2e5ee79fc!2z5p2x5Lqs6Zu75qmf5aSn5a2m!5e0!3m2!1sja!2sjp!4v1412584757601" width="320" height="320" frameborder="0" style="border:0"></iframe></p>
+					</div>
+					<div class="col-md-4 col-lg-4">
+						〒120-8551
+						<br>東京都足立区千住旭町5番
+						<br>
+						<br><strong>最寄り駅からのアクセス</strong>
+						<br>北千住駅東口（電大口）から徒歩1分
+						<br><span class="line-color joban">■</span>JR常磐線
+						<br><span class="line-color hibiya">●</span>東京メトロ日比谷線
+						<br><span class="line-color chiyoda">●</span>東京メトロ千代田線
+						<br><span class="line-color isesaki">■</span>東武伊勢崎線
+						<br><span class="line-color tx">■</span>つくばエクスプレス
+						<br><strong>京成関屋駅から徒歩7分</strong>
+						<br><span class="line-color keisei">■</span>京成本線
+						<br><strong>牛田駅から徒歩7分</strong>
+						<br><span class="line-color isesaki">■</span>東武伊勢崎線	
+						<br>
+						<br>詳しい案内及び学内の地図は<a href="http://web.dendai.ac.jp/access/tokyosenju.html" target="blank">こちら<img src="./images/newtab.png" alt="newtab" /></a>をご覧ください
+					</div>
+				</div>
+			</div>
 
-    </div>
-    <!-- /.container -->
+			<hr>
 
-    <!-- jQuery Version 1.11.0 -->
-    <script src="js/jquery-1.11.0.js"></script>
+			<!-- Footer -->
+			<footer>
+				<div class="row">
+					<div class="col-lg-12">
+						<p>Copyright &copy; 東京電機大学東京千住キャンパス 第3回旭祭実行委員会<br />
+							Designed by <a href="http://twitter.com/keisei_1092" target="blank">@keisei_1092</a> (未来科学部 情報メディア学科 3年)</p>
+						</div>
+						<!-- /.col-lg-12 -->
+					</div>
+					<!-- /.row -->
+				</footer>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+			</div>
+			<!-- /.container -->
 
-</body>
+			<!-- jQuery Version 1.11.0 -->
+			<script src="js/jquery-1.11.0.js"></script>
 
-</html>
+			<!-- Bootstrap Core JavaScript -->
+			<script src="js/bootstrap.min.js"></script>
+
+		</body>
+
+		</html>
