--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
 			<div class="row">
 				<div class="col-sm-8">
-					<h2>今年のテーマは、「＿＿＿＿」。</h2>
-					<p>キャンパスが足立区・北千住に移転して3年目の開催となる旭祭。地域との距離もどんどん密接になってきていますが、そんな今年の旭祭のテーマは「＿＿＿＿」です。コメントコメントコメントコメントコメントコメントコメントコメントコメント・・・・・・・
+					<h2>今年のテーマは、「TRY」。</h2>
+					<p>キャンパスが足立区・北千住に移転して3年目の開催となる旭祭。地域との距離もどんどん密接になってきていますが、そんな今年の旭祭のテーマは「TRY」です。コメントコメントコメントコメントコメントコメントコメントコメントコメント・・・・・・・
 						<br><strong>このページにある内容はまだ雑です。</strong>
 						<br>元ページにあったFeature 01とかのやつ必要だったら実装します。</p>
 						<p>
-							<a class="btn btn-primary btn-lg" href="./about.html">詳しく見る &raquo;</a>
+							<a class="btn btn-primary btn-lg" href="./about.html#introduction">詳しく見る &raquo;</a>
 						</p>
 					</div>
 					<div class="col-sm-4">
@@ -107,7 +107,7 @@
 								<br>10:00〜17:00
 								<br>2014年11月3日(月・祝)
 								<br>10:00〜16:00
-								<br><a href="#">交通アクセス</a>
+								<br><a href="./about.html#access">交通アクセス</a>
 							</address>
 							<address>
 								<img src="./images/twitter.png" width="16" height="16" alt="twitter" />: <a href="http://twitter.com/asahisai" target="blank">@asahisai</a>
