Creating notice.html

--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
 							<a href="./event.html">イベント</a>
 						</li>
 						<li>
-							<a href="./contact.html">お問い合わせ</a>
+							<a href="#contact">お問い合わせ</a>
 						</li>
 						<li>
 							<a href="./notice.html">参加団体の方へ</a>
@@ -173,14 +173,28 @@
 				</div>
 			</div>
 
+			<!-- Contact Row -->
+			<div id="contact" class="row">
+				<div class="col-lg-12">
+					<h1 class="page-header">お問い合わせ
+						<small>Contact</small>
+					</h1>
+					<p><img src="./images/mail.png" class="info-icon" alt="mail" />: <a href="mailto:info@asahisai.com">info@asahisai.com</a> に団体名・要件を記入し送ってください．
+						<br>よろしくお願いします．
+						<br>
+						<br>東京電機大学 旭祭実行委員会室 3号館中2階3M224室
+						<br>外線TEL: 03-5284-5358
+						<br>内線TEL: 4352</p>
+				</div>
+			</div>
+
 			<hr>
 
 			<!-- Footer -->
 			<footer>
 				<div class="row">
 					<div class="col-lg-12">
-						<p>Copyright &copy; 東京電機大学東京千住キャンパス 第3回旭祭実行委員会<br />
-							Designed by <a href="http://twitter.com/keisei_1092" target="blank">@keisei_1092</a> (未来科学部 情報メディア学科 3年)</p>
+						<p>Copyright &copy; 東京電機大学東京千住キャンパス 第3回旭祭実行委員会</p>
 						</div>
 						<!-- /.col-lg-12 -->
 					</div>
