--- a/event.html
+++ b/event.html
@@ -56,7 +56,7 @@
 							<a href="./event.html">イベント</a>
 						</li>
 						<li>
-							<a href="./contact.html">お問い合わせ</a>
+							<a href="./about.html#contact">お問い合わせ</a>
 						</li>
 						<li>
 							<a href="./notice.html">参加団体の方へ</a>
@@ -212,8 +212,7 @@
 					<footer>
 						<div class="row">
 							<div class="col-lg-12">
-								<p>Copyright &copy; 東京電機大学東京千住キャンパス 第3回旭祭実行委員会<br />
-									Designed by <a href="http://twitter.com/keisei_1092" target="blank">@keisei_1092</a> (未来科学部 情報メディア学科 3年)</p>
+								<p>Copyright &copy; 東京電機大学東京千住キャンパス 第3回旭祭実行委員会</p>
 								</div>
 							</div>
 							<!-- /.row -->
