--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							<a href="./event.html">イベント</a>
 						</li>
 						<li>
-							<a href="./contact.html">お問い合わせ</a>
+							<a href="./about.html#contact">お問い合わせ</a>
 						</li>
 						<li>
 							<a href="./notice.html">参加団体の方へ</a>
